# Dispatch-Queue

./: CMakeLists.txt
include/: DispatchQueue.h  TypeErasure.h
src/: DispatchQueue.cpp  main.cpp
